syntax = "proto3";

package com.monash.erp.oms.common.grpc;

option java_multiple_files = true;
option java_package = "com.monash.erp.oms.common.grpc";
option java_outer_classname = "EnumerationProto";

service EnumerationGrpcService {
  rpc GetEnumerationsByType (EnumerationTypeRequest) returns (EnumerationListResponse);
}

message EnumerationTypeRequest {
  string enumTypeId = 1;
}

message EnumerationListResponse {
  repeated EnumerationResponse enumerations = 1;
}

message EnumerationResponse {
  string enumId = 1;
  string enumTypeId = 2;
  string enumCode = 3;
  string sequenceId = 4;
  string description = 5;
}
